# agilm

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  HOW-TO.ipynb  README.md  pyproject.toml
.github/workflows/: workflow.yml
src/agilm/: core.py  types.py  utils.py
src/agilm/providers/: anthropic.py  together.py  vertex.py
src/easy_lm/: __init__.py  types.py  utils.py
src/easy_lm/providers/: together.py
src/lamine/: core.py  datatypes.py  logger.py  types.py  utils.py
src/lamine/providers/: __init__.py  anthropic.py  mock.py  together.py  vertex.py
tests/: test_models.py
