[project]
name = "agilm"
version = "0.1.0"
description = "The rest of the standards to inference LMs are sh*t, let me show you."
readme = "README.md"
authors = [{ name = "nachollorca", email = "madwayesp@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.11",
]

[project.optional-dependencies]
together = ["together>=1.3.11"]
openai = ["openai>=1.59.7"]
anthropic = ["anthropic>=0.43.0"]
vertex = ["google-cloud-aiplatform>=1.77.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
]
