[project]
name = "lamine"
version = "0.1.0"
description = "A LAnguage Model INterface Enginee as god intended, because the rest of the standards to inference LM APIs are sh*t."
readme = "README.md"
authors = [{ name = "nachollorca", email = "madwayesp@gmail.com" }]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
together = ["together>=1.3.11"]
openai = ["openai>=1.59.7"]
anthropic = ["anthropic>=0.43.0"]
vertex = ["google-cloud-aiplatform>=1.77.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.2",
]

[tool.ruff]
fix = true
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["override", "misc"]
